Travel::Status::DE::IRIS 1.99 - Sat Jul 05 2025

    * Deprecation notice: Mention Travel::Status::DE::DBRIS as recommended
      successor. Travel::Status::DE::HAFAS is no longer a viable alternative.
    * db-iris: Do not fail if Cache::File is unavailable
    * Add delay code 27 (Technische Störung am Bus)

Travel::Status::DE::IRIS 1.98 - Thu Jul 04 2024

    * Update stations list

Travel::Status::DE::IRIS 1.97 - Mon May 27 2024

    * Update stations list
    * Add deprecation notice. The backend service that this module relies on
      is deprecated and scheduled for decommissioning. There is no successor.
      Do not use this module for new projects and be prepared to migrate away
      from it sooner rather than later.

Travel::Status::DE::IRIS 1.96 - Sun Feb 25 2024

    * Re-add Wipperliese stations (service resumes on March 29th, 2024)
    * IRIS->new / get_station: correctly handle non-EVA station identifiers
      in with_related mode. Previously, these caused (harmless, but annoying)
      "isn't numeric in numeric eq (==)" warnings.

Travel::Status::DE::IRIS 1.95 - Thu Feb 22 2024

    * Update qos/delay message texts

Travel::Status::DE::IRIS 1.94 - Mon Jan 29 2024

    * Update stations list
    * Do not use now-deprecated smartmatch features

Travel::Status::DE::IRIS 1.93 - Fri Dec 22 2023

    * Update stations list

Travel::Status::DE::IRIS 1.92 - Tue Dec 12 2023

    * Update meta database (accidentally omitted in 1.91)

Travel::Status::DE::IRIS 1.91 - Sun Dec 10 2023

    * Update stations list. Frohes neues Fahrplanjahr.

Travel::Status::DE::IRIS 1.90 - Sun Sep 17 2023

    * Update stations list
    * Result: weaken (circular) wing references
    * Result: include arrival_wings departure_wings replaced_by replacement_for
      in TO_JSON

Travel::Status::DE::IRIS 1.89 - Sat Aug 19 2023

    * Update stations list

Travel::Status::DE::IRIS 1.88 - Sat Aug 05 2023

    * Update stations list

Travel::Status::DE::IRIS 1.87 - Sun Jul 09 2023
