@@ -1,4 +1,4 @@
-FROM perl:5.30-slim
+FROM perl:5.40-slim
 
 COPY bin/ /app/bin/
 COPY lib/ /app/lib/
@@ -17,7 +17,7 @@ RUN apt-get update \
 		libc6-dev \
 		libdb5.3 \
 		libdb5.3-dev \
-		libssl1.1 \
+		libssl3 \
 		libssl-dev \
 		libxml2 \
 		libxml2-dev \
